Source/WebCore/html/canvas/CanvasRenderingContext2DBase.cpp
@@ -1571,25 +1571,6 @@ ExceptionOr<void> CanvasRenderingContext2DBase::drawImage(CSSStyleImageValue& im
     return result;
 }
 
-static std::pair<FloatRect, FloatRect> normalizeSourceAndDestination(const FloatRect& imageRect, const FloatRect& srcRect, const FloatRect& dstRect)
-{
-    std::pair<FloatRect, FloatRect> srcDstRect { normalizeRect(srcRect), normalizeRect(dstRect) };
-
-    // When the source rectangle is outside the source image, the source rectangle must be clipped
-    // to the source image and the destination rectangle must be clipped in the same proportion.
-    FloatRect originalNormalizedSrcRect = srcDstRect.first;
-    srcDstRect.first.intersect(imageRect);
-    if (srcDstRect.first.isEmpty())
-        return srcDstRect;
-
-    if (srcDstRect.first != originalNormalizedSrcRect) {
-        srcDstRect.second.setWidth(srcDstRect.second.width() * srcDstRect.first.width() / originalNormalizedSrcRect.width());
-        srcDstRect.second.setHeight(srcDstRect.second.height() * srcDstRect.first.height() / originalNormalizedSrcRect.height());
-    }
-
-    return srcDstRect;
-}
-
 #if ENABLE(WEB_CODECS)
 ExceptionOr<void> CanvasRenderingContext2DBase::drawImage(WebCodecsVideoFrame& frame, const FloatRect&, const FloatRect& dstRect)
 {
@@ -1628,9 +1609,8 @@ ExceptionOr<void> CanvasRenderingContext2DBase::drawImage(Document& document, Ca
     if (!dstRect.width() || !dstRect.height())
         return { };
 
-    auto normalizedSrcDstRect = normalizeSourceAndDestination(imageRect, srcRect, dstRect);
-    FloatRect normalizedSrcRect = normalizedSrcDstRect.first;
-    FloatRect normalizedDstRect = normalizedSrcDstRect.second;
+    auto normalizedSrcRect = normalizeRect(srcRect);
+    auto normalizedDstRect = normalizeRect(dstRect);
 
     if (normalizedSrcRect.isEmpty())
         return { };
@@ -1711,9 +1691,8 @@ ExceptionOr<void> CanvasRenderingContext2DBase::drawImage(CanvasBase& sourceCanv
     if (!srcRect.width() || !srcRect.height())
         return { };
 
-    auto normalizedSrcDstRect = normalizeSourceAndDestination(srcCanvasRect, srcRect, dstRect);
-    FloatRect normalizedSrcRect = normalizedSrcDstRect.first;
-    FloatRect normalizedDstRect = normalizedSrcDstRect.second;
+    auto normalizedSrcRect = normalizeRect(srcRect);
+    auto normalizedDstRect = normalizeRect(dstRect);
 
     if (normalizedSrcRect.isEmpty())
         return { };
@@ -1772,13 +1751,11 @@ ExceptionOr<void> CanvasRenderingContext2DBase::drawImage(HTMLVideoElement& vide
     if (video.readyState() == HTMLMediaElement::HAVE_NOTHING || video.readyState() == HTMLMediaElement::HAVE_METADATA)
         return { };
 
-    FloatRect videoRect = FloatRect(FloatPoint(), size(video));
     if (!srcRect.width() || !srcRect.height())
         return { };
 
-    auto normalizedSrcDstRect = normalizeSourceAndDestination(videoRect, srcRect, dstRect);
-    FloatRect normalizedSrcRect = normalizedSrcDstRect.first;
-    FloatRect normalizedDstRect = normalizedSrcDstRect.second;
+    auto normalizedSrcRect = normalizeRect(srcRect);
+    auto normalizedDstRect = normalizeRect(dstRect);
 
     if (normalizedSrcRect.isEmpty())
         return { };
